<resources>
    <string name="app_name">Canela Tube</string>

    <!-- Permission text -->
    <string name="permission_denied">Permisos no establecidos, se necesitan para el correcto funcionamiento de la app, otorgalos y intenta de nuevo</string>
    <string name="not_has_permissions_title">No se han obtenido los permisos</string>
    <string name="not_has_permissions_body">Para continuar es necesario aceptar los permisos accede a la configuración de la aplicación y permitelos desde ahi</string>
    <string name="permission_not_set_storage_manager">Se necesita activar el administrador de almacenamiento para continuar la descarga</string>
    <string name="download_cancel_message">Se ha cancelado la descarga</string>
    <string name="permissions_not_set">No se han establecido los permisos requeridos para la descarga</string>
    <string name="download_press_message">Selecciona el formato de descarga</string>
    <string name="download_title">Descargando</string>
    <string name="permissions_required_title">Permisos requeridos</string>
    <string name="permissions_required_message">Para poder descargar tus canciones favoritas es necesario el permiso</string>
    <string name="accept_text_dialog">Aceptar</string>
    <string name="cancel_text_dialog">Cancelar</string>

    <!-- BottomSheet download -->
    <string name="download_no_url_entered">No se ha podido obtener la url del video</string>


    <!-- Vista de tipo de descarga y overlayloading-->
    <string name="lbl_select_type_audio">Audio</string>
    <string name="loading_text_dialog">Cargando</string>
    <string name="lbl_desing_by">Designed by M &amp; A Company</string>
    <string name="lbl_select_type_question">¿Qué quieres descargar?</string>
    <string name="type_download_select_type_video_message">Aun no se implementa esta funcion intente en la siguiente actualización</string>
    <string name="type_download_select_type_no_valid">No ha seleccionado un tipo de descarga</string>
    <string name="lbl_error_details"><u>Ver Detalles del error</u></string>
    <string name="lbl_error_details_error_title">Detalles de error</string>

    <!-- Main -->
    <string name="btn_text_song_item_download">Descargar</string>
    <string name="title_empty_message">No hay canciones para descarga</string>
    <string name="title_empty_message_error">No se consiguio obtener la canciones</string>
    <string name="title_message_success_on_delete_song">Se elimino la canción correctamente</string>
    <string name="title_message_error_on_delete_song">Se genero un error al eliminar la canción</string>
    <string name="title_help_visualization">Ayuda para visualizar</string>
    <string name="title_help_visualization_message">
        Si no puedes visualizar la carpeta intenta con los siguientes pasos:
        \n
        \n
        1. Usa el administrador de archivos de tu dispositivo.
        \n
        \n
        2. Ve a la carpeta de Musica del dispositivo, ahi la encontraras como canelaTube.
        \n
        \n
        <b>ruta de la carpeta:</b> %1$s.
    </string>
    <string name="title_permission_not_aviable">No hay permiso para ver las canciones descargadas</string>
    <string name="title_downloads_song">Canciones descargadas</string>
    <string name="title_downloads_song_empty">No hay canciones descargadas</string>
    <string name="lbl_not_songs_to_show">No hay canciones para mostrar, descarga nuevas canciones y visualizalas aqui</string>
    <string name="title_delete_song_alert">¿Estas seguro que quieres eliminar la canción?</string>
    <string name="message_delete_song_alert">Eliminaras la cancion, esta acción no se puede deshacer, ¿deseas continual con la acción?</string>
    <string name="lbl_not_song_for_delete">No hay ninguna cancion a elminar</string>
    <string name="lbl_state_unknow">Estado desconociodo</string>
    <string name="lbl_show_errors">Mostrando errores</string>
    <string name="option_menu_item_delete">Eliminar</string>

    <string name="lbl_menu_item_our">Acerca de</string>
    <string name="lbl_our_us_licences">Licencias</string>

    <!-- Our Screen texts -->
    <string name="title_card_our_members">Miembros y colaboradores</string>
    <string name="title_card_our_social">Redes Sociales</string>
    <string name="title_card_our_other">Otro</string>
    <string name="lbl_card_name_developer">EncryptonKey</string>
    <string name="lbl_card_charge_developer">Principal desarrollador y Diseñador</string>


    <string name="lbl_our_social_web_title">Sitio Web</string>
    <string name="lbl_our_social_facebook_title">Facebook</string>
    <string name="lbl_our_social_youtube_title">Youtube</string>
    <string name="lbl_our_social_web_sub">Visita el sitio web de la app para saber mas </string>
    <string name="lbl_our_social_facebook_sub">Siguenos en nuestra página</string>
    <string name="lbl_our_social_youtube_sub">Suscribete a nuestro canal de YouTube</string>

    <string name="lbl_our_other_changes_title">Registro de cambios</string>
    <string name="lbl_our_other_license_title">Licencias de codigo abierto</string>
    <string name="lbl_our_other_attributes_title">Atribuciones y agradecimiento</string>
    <string name="lbl_our_other_changes_sub">Ve las novedades de la App</string>
    <string name="lbl_our_other_license_sub">Detalles de licencia para software de código abierto</string>
    <string name="lbl_our_other_attributes_sub">Mira los agradecimientos y atribuciones </string>


    <string name="lbl_our_other_version_title">Versión</string>
    <string name="generic_content_description">Imagen</string>
    <string name="lbl_item_register_change_what_fixed">¡Que se arreglo!</string>
    <string name="lbl_item_register_change_what_new">¡Que hay de nuevo!</string>
    <string name="lbl_message_has_warning_long_song">La canción tiene una duración superior a los 5 minutos,
        lo cual requerirá más tiempo para convertirla y descargarla. Por favor,
        <b>no cierres la aplicación mientras se está procesando</b>
    </string>


</resources>