<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_our_screen"
    android:fillViewport="true"
    tools:context=".ui.about.OurActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_our_members"
            android:layout_width="match_parent"
            android:layout_height="287dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="14dp"
            app:cardBackgroundColor="@color/card_our_background"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_our_title_card_members"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/title_card_our_members"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_our_container_iv_p_developer"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_marginTop="32dp"
                    app:cardCornerRadius="65dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_our_title_card_members">

                    <ImageView
                        android:id="@+id/iv_our_principal_developer"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/generic_content_description"
                        android:src="@drawable/canela_tube_logo" />


                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tv_our_title_principal_developer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="12dp"
                    android:gravity="center"
                    android:text="@string/lbl_card_name_developer"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cv_our_container_iv_p_developer" />

                <TextView
                    android:id="@+id/tv_our_charge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/lbl_card_charge_developer"
                    android:textColor="#212121"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_our_title_principal_developer"
                    app:layout_constraintVertical_bias="0.0" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_our_social"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            app:cardCornerRadius="20dp"
            android:layout_marginTop="12dp"
            app:cardBackgroundColor="@color/card_our_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_our_members">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_our_title_card_social"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/title_card_our_social"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/ll_our_container_options_social"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_our_title_card_social">

                    <include
                        android:id="@+id/our_social_web"
                        layout="@layout/generic_row_icon_title_sub" />

                    <include
                        android:id="@+id/our_social_facebook"
                        layout="@layout/generic_row_icon_title_sub" />

                    <include
                        android:id="@+id/our_social_youtube"
                        layout="@layout/generic_row_icon_title_sub" />


                </androidx.appcompat.widget.LinearLayoutCompat>


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_our_other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="12dp"
            app:cardCornerRadius="20dp"

            app:cardBackgroundColor="@color/card_our_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_our_social">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_our_title_card_other"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/title_card_our_other"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/ll_our_container_options_other"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_our_title_card_other">

                    <include
                        android:id="@+id/our_other_changes"
                        layout="@layout/generic_row_icon_title_sub" />

                    <include
                        android:id="@+id/our_other_license"
                        layout="@layout/generic_row_icon_title_sub" />

                    <include
                        android:id="@+id/our_other_attributes"
                        layout="@layout/generic_row_icon_title_sub" />

                    <include
                        android:id="@+id/our_other_version"
                        layout="@layout/generic_row_icon_title_sub" />


                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/iv_our_icon"
            android:layout_width="138dp"
            android:layout_height="66dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/generic_content_description"
            android:src="@drawable/m_and_a_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_our_other"
            tools:ignore="ImageContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>